--- a/add-on_project.html
+++ b/add-on_project.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>The vegetarian diet</title>
 </head>
 
@@ -145,27 +146,27 @@ footer {
  
 <a href="https://www.hopkinsmedicine.org/health/wellness-and-prevention/how-to-maintain-a-balanced-diet-as-a-vegetarian-or-vegan#:~:text=Choose%20high%20protein%20foods.&text=Great%20vegan%20protein%20sources%20include,sources%20are%20right%20for%20you."
 target="_blank"> 
- <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/976/original/victoria-shes-4MEL9XS-3JQ-unsplash.jpg?1705515784" 
+ <img src="media/veggie-dishes.jpg"
 alt="vegetarian food">
 </a>
 
 <div class="grid">
 <a href="https://www.vegansociety.com/go-vegan/why-go-vegan" target="_blank">
-<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/977/original/wolfgang-hasselmann-_EG_Th77EmQ-unsplash.jpg?1705515792" alt="smiley cow">
+<img src="media/cow.jpg" alt="smiley cow">
 </a>
 
 
 <a href="https://www.theguardian.com/environment/2023/jul/20/vegan-diet-cuts-environmental-damage-climate-heating-emissions-study#:~:text=The%20research%20showed%20that%20vegan,54%25%2C%20the%20study%20found." 
 target="_blank">
-<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/975/original/li-an-lim-ycW4YxhrWHM-unsplash.jpg?1705515770" alt="plant b">
+<img src="media/protest.jpg" alt="plant b">
 </a>
 
 <a href="https://www.healthline.com/nutrition/veganism-and-depression" target="_blank">
-<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/974/original/kliv-brand-UY9qpNjtXiQ-unsplash.jpg?1705515762" alt="eat well feel good text">
+<img src="media/phrase.jpg" alt="eat well feel good text">
 </a>
 
 <a href="https://tasty.co/article/deenashanker/vegan-food-is-delicious" target="_blank">
-<img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/110/973/original/k8-hy8cZtKpHBQ-unsplash.jpg?1705515752" alt="vegan burguer">
+<img src="media/burguer.jpg" alt="vegan burguer">
 </a></div>
 <div>
 <p>
